# ComputerVisionFinal

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TesseractResults.txt  cmake_install.cmake  imgProcess  imgProcess.cpp  imgProcess.h  makefile
src/: imgProcess.cpp  imgProcess.h
